# practica-c

./: .gitignore
headers2/: CMakeLists.txt  headers2.kdev4
headers2/.kdev4/: headers2.kdev4
headers2/src/: CMakeLists.txt  cat.cpp  cat.hpp  main.cpp
headers_test/: CMakeLists.txt  headers_test.kdev4
headers_test/.kdev4/: headers_test.kdev4
headers_test/src/: CMakeLists.txt  animal.cpp  animal.hpp  cat.cpp  cat.hpp  dog.cpp  dog.hpp  enums.hpp  main.cpp  repoAnimales.cpp  repoAnimales.hpp
